Frontend adjustments (#113)
* remove console.log and add response to reset password

* add .env server link to httpPasswordChange

* add deleted user handling to MatchItem

* handle deleted user display information

* cleanup

* update documentation for user history

* add success messages

* add response succes mesages to userProfile. update cronjob function

* remove hook from userSchema, update swagger file

---------
